students/TunchikAnton/task_02/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend
spec:
  selector:
    app: todo-backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
