students/TunchikAnton/task_02/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend
spec:
  selector:
    app: todo-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
